--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/StreamingAssets/
 Bundle/
+.idea/
+Assets/HotUpdate/Configs/
+Bundles/
